src/objects/Resume__c.object
<CustomObject>
    <description>Repository for AECOM Resumes (Draft)</description>
    <fields>
        <fullName>EmployeeName__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Employee Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AECOM_Employee__c.Status__c</field>
                <operation>notEqual</operation>
                <value>Inactive</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AECOM_Employee__c</referenceTo>
        <relationshipLabel>Resumes</relationshipLabel>
        <relationshipName>Resumes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Experience_Summary__c</fullName>
        <label>Experience Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Places_I_Would_Not_Relocate__c</fullName>
        <label>Places I Would Not Relocate</label>
        <picklist>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia/New Zealand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South America</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Places_I_Would_Relocate__c</fullName>
        <inlineHelpText>Choose the region(s) where you would relocate.</inlineHelpText>
        <label>Places I Would Relocate</label>
        <picklist>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia/New Zealand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South America</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Willing_to_Relocate__c</fullName>
        <description>Indicates whether an employee would be willing to relocate</description>
        <inlineHelpText>Select a value to indicate your willingness to relocate. Conditional means there are places you would be willing to relocate, but others where you would not relocate.</inlineHelpText>
        <label>Willing to Relocate</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditional</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Resume</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Resume Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resumes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>